packages/ui_tests/tests/ui/blind_pool/compile_fail/blind_pool_non_static_fail.stderr
error[E0597]: `value` does not live long enough
  --> tests/ui/blind_pool/compile_fail/blind_pool_non_static_fail.rs:7:21
   |
6  |     let value = 42;
   |         ----- binding `value` declared here
7  |     let reference = &value; // This is not 'static
   |                     ^^^^^^ borrowed value does not live long enough
...
10 |     let _handle = pool.insert(reference);
   |                   ---------------------- argument requires that `value` is borrowed for `'static`
11 | }
   | - `value` dropped here while still borrowed
